--- a/frontend/components/common/CopyBadge/styles.module.css
+++ b/frontend/components/common/CopyBadge/styles.module.css
@@ -27,7 +27,7 @@
 }
 
 .container.lg {
-	padding: 4px 12px;
+	padding: 3px var(--size-spacing-15);
 	font-size: 14px;
 	letter-spacing: 0.5px;
 }
@@ -36,7 +36,7 @@
 /* HAS BORDER */
 
 .hasBorder {
-	padding: 3px 6px 2px;
+	padding: 3px var(--size-spacing-15);
 	background-color: var(--color-system-background-200);
 	border: 1px solid var(--color-system-text-300);
 }
