--- a/frontend/components/map/MapView/styles.module.css
+++ b/frontend/components/map/MapView/styles.module.css
@@ -2,25 +2,26 @@
 /* CONTAINER */
 
 .container {
-	width: 100%;
-	height: 100%;
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	/* display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr auto; */
-	flex-direction: column;
-	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 /* * */
-/* CHILDREN WRAPPER */
+/* TOOLBAR */
 
-.childrenWrapper {
-	/* position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-	height: 100%; */
+.toolbar {
+	padding: var(--size-spacing-10);
+}
+
+@media screen and (width <= 650px) {
+	.toolbar {
+		padding: var(--size-spacing-20);
+		background-color: var(--color-system-background-100);
+	}
+
 }
 
 /* * */
@@ -28,24 +29,18 @@
 
 .attributionWrapper {
 	position: absolute;
-	bottom: 0;
 	right: 0;
+	bottom: 0;
 	display: flex;
+	gap: var(--size-spacing-5);
 	padding: var(--size-spacing-5) var(--size-spacing-10);
 	font-size: 8px;
 	font-weight: var(--font-weight-semibold);
 	line-height: 1;
 	color: var(--color-system-text-300);
-	gap: var(--size-spacing-5);
 }
 
-.attributionWrapper a:hover{
+.attributionWrapper a:hover {
 	color: var(--color-primary-black);
 	text-decoration: underline;
-}
-
-/* * */
-/* Toolbar */
-.toolbar{
-	margin: var(--size-spacing-10) var(--size-spacing-5);
 }
